--- a/JavaScript/Hw6_iPadAir.css
+++ b/JavaScript/Hw6_iPadAir.css
@@ -38,6 +38,10 @@
     /* position: fixed; */
     position: sticky;
     top: 0;
+    opacity: 95%;
+}
+.title p{
+    line-height: 88px;
 }
 
 
@@ -54,7 +58,7 @@
     width: 100%;
     transition: all 1s 0s ease;
     position: sticky;
-    top: 55px;
+    top: 90px;
 }
 p, h2, .content{
     width: 100%;
@@ -63,9 +67,14 @@ p, h2, .content{
 h2{
     font-size: 40px;
     line-height: 44px;
+    padding: 20px 0;
 }
 .content {
     padding: 30px 0;
+    border-bottom: 1px solid #ccc;
+}
+.content:last-of-type{
+    border: none;
 }
 .content > p:last-of-type{
     display: flex;
