--- a/Today專題/homestyle.css
+++ b/Today專題/homestyle.css
@@ -99,23 +99,36 @@ h1{
     width: calc(100% / 2 - 1rem * 1);
 }
 .card:hover{
-    opacity: 85%;
+    opacity: 75%;
+}
+
+/* 最新 */
+.new-limit .event-details{
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
 }
 
 /* city */
 .city-limit .group-card{
-    width: 100%;
-} 
+    height: 230px;
+}
 .city-details{
     bottom: 20px;
     left: 20px;
+    transition: all 1s ease;
 }
 .city-details span{
     border: 1px solid white;
     border-radius: 50px;
+    box-sizing: border-box;
+    transition: all 1s ease;
 }
 .city div, .footer .info, .pic{
     box-sizing: border-box;
+}
+.group-card > div{
+    transition: all 1s ease;
 }
 
 /* TOP 10 */
@@ -156,6 +169,10 @@ h1{
 .choose-limit a:hover{
     opacity: 85%;
 }
+.choose-limit .car{
+    bottom: -10px;
+    left: 100px;
+}
 
 /* other-selection */
 .other-selection-limit h5, .other-selection-limit ul{
@@ -163,6 +180,9 @@ h1{
 }
 .other-selection-limit a:hover{
     color: #51BAF8!important;
+}
+.other-selection-limit ul li, .footer-limit ul li{
+    box-sizing: border-box;
 }
 
 /* footer */
@@ -188,7 +208,9 @@ h1{
     .group-card{
         width: 100%;
     }
-    
+    .other-selection-limit .title-icon, .footer-limit .title-icon{
+        cursor: pointer;
+    }
 }
 @media screen and (min-width: 768px) {
     .category{
@@ -217,6 +239,47 @@ h1{
     .choose img{
         margin-top: -100px;
     }
+    .choose .reason, .choose .travel-pic{
+        box-sizing: border-box;
+    }
+}
+@media screen and (max-width: 992px) {
+    header .navbar-toggler{
+        width: 40px;
+        height: 40px;
+        background-color: black;
+        position: relative;
+    }
+    header .navbar-toggler span{
+        background-color: white;
+        display: block;
+        width: 33px;
+        height: 3px;
+
+        position: absolute;
+
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        transition: all 1s 0s ease;
+    }
+    header .navbar-toggler span:first-child{
+        transform: translate(0, -8px);
+    }
+    header .navbar-toggler span:last-child{
+        transform: translate(0, 8px);
+    }
+    /* header button:checked ~ span:first-child{
+        transform: translate(0, 0) rotate(-45deg);
+    }
+    header button:checked ~ span:nth-child(2){
+        transform: scale(0);
+    }
+    header button:checked ~ span:last-child{
+        transform: translate(0, 0) rotate(45deg);
+    } */
 }
 
 @media screen and (min-width: 992px) {
